Menu mobile : fixed

--- a/jekyll/_layouts/default.html
+++ b/jekyll/_layouts/default.html
@@ -4,6 +4,7 @@
         {{ content }}
         {% include footer.html %}
 </body>
- <!-- Js file -->
+ <!-- Js files -->
+ <script src="{{ '/assets/js/theme.js' | relative_url }}"></script>
  <script src="/assets/js/script.js"></script>
 </html>
