--- a/jekyll/_sass/_navigation.scss
+++ b/jekyll/_sass/_navigation.scss
@@ -45,15 +45,20 @@ a {
     display: none;
 }
 
+
 @media screen and (max-width: 770px) {
     .links {
         position: absolute;
+        top: 0px;
+        left: 0px;
         display: flex;
         flex-direction: column;
         align-items: center;
         background-color: rgba(255, 255, 255, 0.2);
         backdrop-filter: blur(8px);
         height: 100vh;
+        margin: 0px;
+        padding: 0px;
         margin-left: -100%;
         transition: all 0.5s ease;
     }
