--- a/jekyll/_includes/header.html
+++ b/jekyll/_includes/header.html
@@ -23,4 +23,6 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/assets/css/styles.css">
 
+        <!--script src="{{ '/assets/js/theme.js' | relative_url }}"></script-->
+
     </head>
