--- a/jekyll/_sass/_base.scss
+++ b/jekyll/_sass/_base.scss
@@ -10,6 +10,9 @@ html{
   
 body {
     font-family: "Poppins", sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .badge {
