Projects page : ok

--- a/jekyll/_sass/_navigation.scss
+++ b/jekyll/_sass/_navigation.scss
@@ -61,6 +61,7 @@ a {
         padding: 0px;
         margin-left: -100%;
         transition: all 0.5s ease;
+        //z-index: 900;
     }
 
     .icon {
