--- a/jekyll/_includes/projects/project_card.html
+++ b/jekyll/_includes/projects/project_card.html
@@ -1,19 +1,19 @@
-<div class="wow animated fadeIn" data-wow-delay=".15s">
-    <a href="{{ project_url }}" class="project card text-themed" {%- if external and site.open_new_tab -%} target="_blank" {%- endif -%}>
+<div class="parent" data-wow-delay=".15s">
+    <a href="{{ project_url }}" class="project card" {%- if external and site.open_new_tab -%} target="_blank" {%- endif -%}>
         {%- if project_img -%}
-        <img src="{{ project_img }}" alt="{{ project_name }}" class="card-img-top" id="{{ project_id }}"/>
+            <img src="{{ project_img }}" alt="{{ project_name }}" class="card-img-top"/>
         {%- endif -%}
-        <div class="card-body">
-            <h5 id="{{ project_id }}-name" class="card-title">
+        <div class="card-content">
+            <h5 id="{{ project_id }}-name">
                 {%- if project_type == "remote" -%}
-                <i class="fab fa-github" data-toggle="tooltip" data-placement="bottom" data-delay="250" title="Github Repository"></i>
+                    <i title="Github Repository" data-toggle="tooltip" data-placement="bottom" data-delay="250"></i>
                 {%- endif -%}
                 {{ project_name }}
             </h5>
-            <p id="{{ project_id }}-desc" class="card-text">{{ project_desc }}</p>
-            <p id="{{ project_id }}-tools" class="card-text">
+            <p id="{{ project_id }}-desc">{{ project_desc }}</p>
+            <p id="{{ project_id }}-tools">
                 {%- for language in project_languages -%}
-                <span class="badge badge-pill text-primary border border-primary ml-1">{{ language }}</span>
+                    <span>{{ language }}</span>
                 {%- endfor -%}
             </p>
         </div>
