--- a/jekyll/_includes/more/skills.html
+++ b/jekyll/_includes/more/skills.html
@@ -1,13 +1,13 @@
-<div class="col-lg">
-    <h2 class="mb-3">{{ include.title }}</h2>
+<div>
+    <h2>{{ include.title }}</h2>
 
     {% for skill in include.source %}
-    <div class="row justify-content-between align-items-center">
-        <div class="col-10">
-            <p class="mb-1">{{ skill.name }}</p>
+    <div class="skills">
+        <div class="skill-perform">
+            <p>{{ skill.name }}</p>
         </div>
-        <div class="col-2 text-right">
-            <p class="mb-1 text-muted">{{ skill.percentage }}%</p>
+        <div class="skill-perform">
+            <p>{{ skill.percentage }}%</p>
         </div>
     </div>
 
