--- a/jekyll/_sass/_more.scss
+++ b/jekyll/_sass/_more.scss
@@ -1,4 +1,33 @@
-.skill {
+.m-container {
+  z-index: -10;
+}
+
+
+.subCont {
+  width: 90vw;
+  box-sizing: border-box;
+  margin-left: 20px;
+  padding-top: 20px;
+}
+
+
+.skills {
+  padding-top: 20px;
+}
+
+.skill-perform:first-child {
+  float: left;
+}
+
+.skill-perform:last-child {
+  text-align: right;
+}
+
+h2 {
+  color: rgba(245, 236, 98, 0.8);
+}
+
+/*.skill {
     margin-bottom: 35px;
     position: relative;
     overflow: hidden;
@@ -17,9 +46,9 @@
         background: $light;
         bottom: 0;
     }
-}
+}*/
 
-.skill-bar {
+/*.skill-bar {
     width: 100%;
     height: 5px;
     background: $primary;
@@ -36,7 +65,7 @@
         font-weight: 500;
         right: 0;
     }
-}
+}*/
 
 .skill-bar.skill-bar-secondary {
     background: $secondary;
